kubernetes/front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtraining-front
  labels:
    app: speedtraining-front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: speedtraining-front
  template:
    metadata:
      name: speedtraining-front
      labels:
        app: speedtraining-front
    spec:
      imagePullSecrets:
        - name: pcavezzan.azurecr.io
      containers:
        - image: pcavezzan.azurecr.io/speedtraining/front:v2
          name: main
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 200m
              memory: 64Mi
            requests:
              cpu: 100m
              memory: 32Mi
          livenessProbe:
            httpGet:
              port: 8080
              path: /assets/status.json
          readinessProbe:
            httpGet:
              port: 8080
              path: /assets/status.json
          startupProbe:
            httpGet:
              port: 8080
              path: /assets/status.json
            failureThreshold: 20
