kubernetes/front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtraining-front
  labels:
    app: speedtraining-front
spec:
  rules:
    - host: speedtraining-front-tmodeste.apps.codeinlove.fr
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: speedtraining-front
                port:
                  number: 80
